<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/blue" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/btn_incubation_incubator"
                android:textColor="@drawable/white"
                android:textSize="16sp" />
			 <ImageButton
                android:id="@+id/ib_incubator_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@drawable/mm_title_back" 
                />
         
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" 
            android:focusableInTouchMode="true"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1" >

                <!-- 创始人姓名 -->

                <TableRow
                    android:id="@+id/tr_set_founder_name"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_founder_name" />

                    <TextView
                        android:id="@+id/tv_set_mine_nico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_mine_nico" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 出生年份 -->

                <TableRow
                    android:id="@+id/tr_set_year_of_birth"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_year_of_birth" />

                    <TextView
                        android:id="@+id/tv_set_year_of_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_year_of_birth" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 手机号码 -->

                <TableRow
                    android:id="@+id/tr_set_phone_number"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_phone_number" />

                    <TextView
                        android:id="@+id/tv_set_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_phone_number" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 现所在地 -->

                <TableRow
                    android:id="@+id/tr_set_now_address"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_now_address" />

                    <TextView
                        android:id="@+id/tv_set_now_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_now_address" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/gray" />
                <!-- 毕业学校 -->

                <TableRow
                    android:id="@+id/tr_set_graduate_school"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_graduate_school" />

                    <TextView
                        android:id="@+id/tv_set_graduate_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_graduate_school" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 毕业时间 -->

                <TableRow
                    android:id="@+id/tr_set_graduate_time"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_graduate_time" />

                    <TextView
                        android:id="@+id/tv_set_graduate_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_graduate_time" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@color/gray" />
                <!-- 公司名称 -->

                <TableRow
                    android:id="@+id/tr_set_company_name"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_company_name" />

                    <TextView
                        android:id="@+id/tv_set_company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_company_name" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 团队人数 -->

                <TableRow
                    android:id="@+id/tr_set_team_number"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                     >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_team_number" />

                    <EditText
                        android:id="@+id/et_set_team_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:inputType="number"
                        android:text="@string/tv_set_team_number" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
                <!-- 期望入驻时间 -->

                <TableRow
                    android:id="@+id/tr_set_expected_time_to_be_settled"
                    android:gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/tr_set_expected_time_to_be_settled" />

                    <TextView
                        android:id="@+id/tv_set_expected_time_to_be_settled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/tv_set_expected_time_to_be_settled" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/tr_set_remarks" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_set_remaks" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

           
        </LinearLayout>
    </ScrollView>
     <Button
                android:id="@+id/btn_commit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_selector"
                android:textColor="@drawable/btn_text_selector"
                android:layout_marginBottom="12dp"
                android:text="@string/btn_commit" />
</LinearLayout>
