<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <chuangbang.view.MyTextView
        android:id="@+id/tv_write3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:lineSpacingExtra="5dp"
        android:lineSpacingMultiplier="1.2"
        android:paddingRight="4dp"
        android:paddingTop="7dp"
        android:text="@string/tv_write3"
        android:textSize="15sp" />

    <chuangbang.view.MyTextView
        android:id="@+id/tv_write4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="5dp"
        android:paddingRight="4dp"
        android:text="@string/tv_write4"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btn_make_account"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_accounting_do_account"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_intellectual_property"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_intellectual_property_right"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_incubation_incubator"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_incubation_incubator"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btn_registered_company"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_registered_company"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_legal_advice"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/btn_legal_advice"
            android:textColor="#ffffff"
            android:textSize="14dp" />
        
        <Button
          	android:id="@+id/btn_service_develop"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_height="33dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="技术开发"
            android:textColor="#ffffff"
            android:textSize="14dp"/>
    </LinearLayout>

</LinearLayout>